--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "paths": { "~/*": ["./*"], "styled-system/*": ["../styled-system/*"] }
   },
-  "include": ["src", "styled-system"],
+  "include": ["src", "styled-system", "./vitest-setup.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
